2008-04-03  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/repo.cc (show_catalogue_dialog): call to allow_updating()
	after the dialog has been shown, to avoid possible overlaps.
	Partially fixes N83505.

2008-04-03  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (get_package_list_reply_temp): Set the global
	variable package_list_ready to its correct value (N83547).

2008-04-03  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.8
	
	* src/operations.cc (ip_install_with_info): Only show packages
	that are not installed at all for a restore operation (N83477).

2008-04-02  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/util.h, src/util.cc (set_entertainment_main_title): Added
	'strong' argument for setting the strong_main_title attribute
	explicitly.
	(set_entertainment_main_title): Do not set the strong_main_title
	attribute to false, that would defeat its purpose.
	(ensure_network_cont): Reset subtitle since we are done.
	* src/main.cc (refresh_package_cache_without_user): Make the main
	title strong (N82724).

	* src/dbus.cc (receive_battery_status_update): Initialize msg.

	Do not store the update-notifier state in GConf (N83578).

	* src/user_files.h (UFILE_UPDATE_NOTIFIER, UFILE_LAST_UPDATE):
	New.
	* src/update-notifier-conf.h (UPNO_GCONF_STATE,
	(UPNO_GCONF_ALARM_COOKIE, UPNO_GCONF_LAST_UPDATE): Removed.
	* src/main.cc (save_last_update_time, load_last_update_time): New.
	(rpcwu_reply, maybe_refresh_package_cache_without_user): Use them
	instead of the UPNO_GCONF_LAST_UPDATE key.
	* src/update-notifier.c: Define _GNU_SOURCE to get the prototype
	of getline.
	(upno_state): New type.
	(UpdateNotifierPrivate): Use it instead of just icon_state.
	(load_state, save_state): New.
	(set_icon_visibility): Don't store into GConf, call save_state
	instead.
	(update_icon_visibility): Don't look into GConf.
	(setup_alarm): Likewise.
	(gconf_state_changed): Removed.
	(setup_gconf): Don't listen for UPNO_GCONF_STATE anymore.